--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="login">Login</string>
     <string name="don_t_have_an_account">Don\'t Have an Account?</string>
     <string name="sign_up">SIGN-UP</string>
+    <string name="register">Register</string>
 </resources>
