--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="don_t_have_an_account">Don\'t Have an Account?</string>
     <string name="sign_up">SIGN-UP</string>
     <string name="register">Register</string>
+    <string name="register_success">Succes</string>
 </resources>
