--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="register_success">Succes</string>
     <string name="login_success">Login Succes</string>
     <string name="img_title">Image Title Story</string>
+    <string name="back_button">Back</string>
 </resources>
