Create Fitur Post Story

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="gallery">Gallery</string>
     <string name="share_your_story">Share your story.....</string>
     <string name="add_story">Upload Story</string>
+    <string name="upload_success">Upload Succes</string>
 </resources>
