--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_add">Add</string>
     <string name="title_profile">Profile</string>
-    <string name="validate_password">Password must 8 characters</string>
-    <string name="validate_email">Invalid email format</string>
+    <string name="validate_password">password must 8 characters</string>
+    <string name="validate_email">invalid email format</string>
     <string name="email_example"><![CDATA[>email@dicoding.com]]></string>
     <string name="login">Login</string>
     <string name="don_t_have_an_account">Don\'t Have an Account?</string>
