--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="invalid_story_id_or_token">Invalid StoryId or Token</string>
     <string name="fill_out_all_form">Fill out All Form</string>
     <string name="stories_location">Stories Location</string>
+    <string name="title_activity_storie_maps">StorieMapsActivity</string>
 </resources>
