--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="stories_location">Stories Location</string>
     <string name="title_activity_storie_maps">StorieMapsActivity</string>
     <string name="retry">Try Again</string>
+    <string name="add_location">Add Location</string>
 </resources>
