--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="upload_success">Upload Succes</string>
     <string name="story">STORY</string>
     <string name="post_story">POST STORY</string>
-    <string name="info">This page will be developed in the final submission</string>
+    <string name="info">This page will be developed in the future</string>
     <string name="logout">Logout</string>
     <string name="logout_succes">Logout Succes</string>
     <string name="no_story_data">No story data</string>
